Added Suport For Heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "babel-node ./src/www",
-    "test": "testcafe chromium tests/",
+    "test": "testcafe chrome tests/",
     "setup": "sh setup.sh",
     "build": "babel src -d lib"
   },
