--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "das",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "8.6.*"
+  },
   "scripts": {
     "start": "nf start",
     "test": "testcafe chrome tests/",
