Added Suported for Node 8.6 Modules

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "start": "nf start",
     "test": "testcafe chrome tests/",
-    "setup": "sh setup.sh",
-    "build": "babel src -d lib",
-    "preinstall": "babel src -d lib"
+    "setup": "sh setup.sh"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
@@ -25,11 +23,7 @@
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "pg-promise": "^5.3.4",
-    "serve-favicon": "~2.3.0",
-    "babel-cli": "^6.0.0",
-    "babel-plugin-transform-regenerator": "*",
-    "babel-polyfill": "*",
-    "babel-preset-latest": "*"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "chai": "*"
